updated md in ava and started rava processing

--- a/ava/standardize_ava.ipynb
+++ b/ava/standardize_ava.ipynb
@@ -56,17 +56,14 @@
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from datetime import date, timedelta\n",
+    "from datetime import date\n",
     "from pyogrio import read_dataframe\n",
     "import glob\n",
     "import geopandas as gpd\n",
     "import sys\n",
     "import os\n",
     "import chardet\n",
-    "import tarfile\n",
-    "from urllib.request import urlretrieve\n",
-    "import regex as re\n",
-    "from shapely.validation import make_valid"
+    "import regex as re"
    ]
   },
   {
@@ -2551,7 +2548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
