added all years of neon data, continued on rava, ensured 0 and nan separate, fixed neon spf function

--- a/ava/standardize_ava.ipynb
+++ b/ava/standardize_ava.ipynb
@@ -1501,7 +1501,7 @@
     "        df_melted = df.melt(id_vars=['speciesNameNoAuth'], value_vars=plot_id_cols, var_name='plotName', value_name='percentCover')\n",
     "        \n",
     "        # Replace problematic values and convert percentCover to float\n",
-    "        df_melted['percentCover'] = pd.to_numeric(df_melted['percentCover'], errors='coerce').fillna(0)\n",
+    "        df_melted['percentCover'] = pd.to_numeric(df_melted['percentCover'], errors='coerce').fillna(np.nan)\n",
     "        \n",
     "        species_fcover_tables.append(df_melted[['plotName', 'speciesNameNoAuth', 'percentCover']])\n",
     "    \n",
