adding supplementary scripts to the repo; small updates to ava and rava synthesis

--- a/rava/standardize_rava.ipynb
+++ b/rava/standardize_rava.ipynb
@@ -2,16 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f60e9972-84d9-4573-adcf-b2dca82f9141",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'regex'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mchardet\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mast\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mregex\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mre\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mdatetime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m datetime, timedelta\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'regex'"
+     ]
+    }
+   ],
    "source": [
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import date\n",
-    "from pyogrio import read_dataframe\n",
     "import glob\n",
     "import geopandas as gpd\n",
     "import sys\n",
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "81745748-4626-4c1a-a5bf-4e2b11a281b3",
    "metadata": {},
    "outputs": [],
@@ -3643,6 +3654,14 @@
     "pft_fcover = pft_fcover[pfts]\n",
     "pft_fcover.head(3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "502b3465-293c-458b-897f-5a684f29a806",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -3661,7 +3680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
