made create_parent_plots script work and tidied up harmonization scripts

--- a/ava/standardize_ava.ipynb
+++ b/ava/standardize_ava.ipynb
@@ -124,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2076960/475273242.py:12: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_3430696/475273242.py:12: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  ava_points.replace(na_values, np.nan, inplace=True)\n"
      ]
     }
@@ -764,25 +764,25 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Orthocaulis binsteadii</td>\n",
+       "      <td>Tripleurospermum maritimum s. phaeocephalum</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Rhododendron tomentosum s. decumbens</td>\n",
+       "      <td>Poa pseudoabbreviata</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Sparganium natans</td>\n",
+       "      <td>Stereocaulon arcticum</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     datasetSpeciesName\n",
-       "0                Orthocaulis binsteadii\n",
-       "1  Rhododendron tomentosum s. decumbens\n",
-       "2                     Sparganium natans"
+       "                            datasetSpeciesName\n",
+       "0  Tripleurospermum maritimum s. phaeocephalum\n",
+       "1                         Poa pseudoabbreviata\n",
+       "2                        Stereocaulon arcticum"
       ]
      },
      "execution_count": 19,
@@ -845,38 +845,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Orthocaulis binsteadii</td>\n",
-       "      <td>Orthocaulis binsteadii</td>\n",
-       "      <td>liverwort</td>\n",
+       "      <td>Tripleurospermum maritimum s. phaeocephalum</td>\n",
+       "      <td>Tripleurospermum maritimum</td>\n",
+       "      <td>forb</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Rhododendron tomentosum s. decumbens</td>\n",
-       "      <td>Rhododendron tomentosum</td>\n",
-       "      <td>dwarf shrub, shrub</td>\n",
+       "      <td>Poa pseudoabbreviata</td>\n",
+       "      <td>Poa pseudoabbreviata</td>\n",
+       "      <td>graminoid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Sparganium natans</td>\n",
-       "      <td>Sparganium natans</td>\n",
-       "      <td>forb</td>\n",
+       "      <td>Stereocaulon arcticum</td>\n",
+       "      <td>Stereocaulon arcticum</td>\n",
+       "      <td>lichen</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         datasetSpeciesName                  joinKey  \\\n",
-       "index                                                                  \n",
-       "0                    Orthocaulis binsteadii   Orthocaulis binsteadii   \n",
-       "1      Rhododendron tomentosum s. decumbens  Rhododendron tomentosum   \n",
-       "2                         Sparganium natans        Sparganium natans   \n",
+       "                                datasetSpeciesName  \\\n",
+       "index                                                \n",
+       "0      Tripleurospermum maritimum s. phaeocephalum   \n",
+       "1                             Poa pseudoabbreviata   \n",
+       "2                            Stereocaulon arcticum   \n",
        "\n",
-       "             speciesHabit  \n",
-       "index                      \n",
-       "0               liverwort  \n",
-       "1      dwarf shrub, shrub  \n",
-       "2                    forb  "
+       "                          joinKey speciesHabit  \n",
+       "index                                           \n",
+       "0      Tripleurospermum maritimum         forb  \n",
+       "1            Poa pseudoabbreviata    graminoid  \n",
+       "2           Stereocaulon arcticum       lichen  "
       ]
      },
      "execution_count": 20,
@@ -932,28 +932,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Orthocaulis binsteadii</td>\n",
-       "      <td>Orthocaulis binsteadii</td>\n",
+       "      <td>Tripleurospermum maritimum s. phaeocephalum</td>\n",
+       "      <td>Tripleurospermum maritimum</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Rhododendron tomentosum s. decumbens</td>\n",
-       "      <td>Rhododendron tomentosum</td>\n",
+       "      <td>Poa pseudoabbreviata</td>\n",
+       "      <td>Poa pseudoabbreviata</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Sparganium natans</td>\n",
-       "      <td>Sparganium natans</td>\n",
+       "      <td>Stereocaulon arcticum</td>\n",
+       "      <td>Stereocaulon arcticum</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     datasetSpeciesName                  joinKey\n",
-       "0                Orthocaulis binsteadii   Orthocaulis binsteadii\n",
-       "1  Rhododendron tomentosum s. decumbens  Rhododendron tomentosum\n",
-       "2                     Sparganium natans        Sparganium natans"
+       "                            datasetSpeciesName                     joinKey\n",
+       "0  Tripleurospermum maritimum s. phaeocephalum  Tripleurospermum maritimum\n",
+       "1                         Poa pseudoabbreviata        Poa pseudoabbreviata\n",
+       "2                        Stereocaulon arcticum       Stereocaulon arcticum"
       ]
      },
      "execution_count": 21,
@@ -1091,23 +1091,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Orthocaulis binsteadii</td>\n",
-       "      <td>Orthocaulis binsteadii</td>\n",
-       "      <td>liverwort</td>\n",
+       "      <td>Tripleurospermum maritimum s. phaeocephalum</td>\n",
+       "      <td>Tripleurospermum maritimum</td>\n",
+       "      <td>forb</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Rhododendron tomentosum s. decumbens</td>\n",
-       "      <td>Rhododendron tomentosum</td>\n",
-       "      <td>dwarf shrub, shrub</td>\n",
-       "      <td>evergreen</td>\n",
+       "      <td>Poa pseudoabbreviata</td>\n",
+       "      <td>Poa pseudoabbreviata</td>\n",
+       "      <td>graminoid</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Sparganium natans</td>\n",
-       "      <td>Sparganium natans</td>\n",
-       "      <td>forb</td>\n",
+       "      <td>Stereocaulon arcticum</td>\n",
+       "      <td>Stereocaulon arcticum</td>\n",
+       "      <td>lichen</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1115,15 +1115,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                     datasetSpeciesName                  joinKey  \\\n",
-       "0                Orthocaulis binsteadii   Orthocaulis binsteadii   \n",
-       "1  Rhododendron tomentosum s. decumbens  Rhododendron tomentosum   \n",
-       "2                     Sparganium natans        Sparganium natans   \n",
+       "                            datasetSpeciesName                     joinKey  \\\n",
+       "0  Tripleurospermum maritimum s. phaeocephalum  Tripleurospermum maritimum   \n",
+       "1                         Poa pseudoabbreviata        Poa pseudoabbreviata   \n",
+       "2                        Stereocaulon arcticum       Stereocaulon arcticum   \n",
        "\n",
-       "         speciesHabit leafRetention  \n",
-       "0           liverwort                \n",
-       "1  dwarf shrub, shrub     evergreen  \n",
-       "2                forb                "
+       "  speciesHabit leafRetention  \n",
+       "0         forb                \n",
+       "1    graminoid                \n",
+       "2       lichen                "
       ]
      },
      "execution_count": 24,
@@ -1147,12 +1147,12 @@
     {
      "data": {
       "text/plain": [
-       "['liverwort',\n",
-       " 'shrub',\n",
-       " 'forb',\n",
+       "['forb',\n",
        " 'graminoid',\n",
-       " 'moss',\n",
        " 'lichen',\n",
+       " 'moss',\n",
+       " 'liverwort',\n",
+       " 'shrub',\n",
        " 'spore-bearing',\n",
        " nan,\n",
        " 'deciduous tree',\n",
@@ -2442,7 +2442,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2076960/3988488299.py:5: FutureWarning: DataFrame.groupby with axis=1 is deprecated. Do `frame.T.groupby(...)` without axis instead.\n",
+      "/tmp/ipykernel_3430696/3988488299.py:5: FutureWarning: DataFrame.groupby with axis=1 is deprecated. Do `frame.T.groupby(...)` without axis instead.\n",
       "  non_veg = non_veg.groupby(lambda x:x, axis=1).sum()\n"
      ]
     },
@@ -3087,7 +3087,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2076960/1816956801.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/tmp/ipykernel_3430696/1816956801.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -3311,6 +3311,14 @@
     "pft_aux = fcover_and_aux[auxcols]\n",
     "pft_aux.to_csv(f'output_data/{source}_plot_info.csv', encoding='utf-8-sig')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e814ee05",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
