--- a/harmonization.ipynb
+++ b/harmonization.ipynb
@@ -6961,7 +6961,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "oldgee",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
