--- a/neon/standardize_neon.ipynb
+++ b/neon/standardize_neon.ipynb
@@ -2015,7 +2015,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "oldgee",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
