fixed UID bug by adding u in front of hex code

--- a/neon/standardize_neon.ipynb
+++ b/neon/standardize_neon.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 113,
    "id": "ebe57879-c575-4632-8e68-74e72fe6f0db",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 114,
    "id": "77548174-b901-4e02-a5bd-d2798e2bf4de",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
        "<module 'standardize_pft_funcs' from '/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 115,
    "id": "7c73249f-1281-4cf1-b69e-11595dac1da8",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 116,
    "id": "17334e1e",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 117,
    "id": "ed520418-515e-4d2d-afdd-df7b98227c32",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 118,
    "id": "87d11f33-0e08-44ed-bcf4-77798b8169fa",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 119,
    "id": "ff17ab74-2de4-4325-aef4-e92f20a08691",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "8359                                  Poaceae sp.            NaN           0.5  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 120,
    "id": "5b6925a6",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "       'rock'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 121,
    "id": "1e81abe9-023a-4ff2-bba7-cdbf0b520822",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
        "8359                                  Poaceae sp.           0.5  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 122,
    "id": "e4e79b78-a122-46e8-a366-2753060b4f80",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 123,
    "id": "1c5ef908-8ec9-4ad3-820c-d4c248634cca",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
        "2  Dillman et al. 2012   species      lichen       lichen  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 124,
    "id": "ed04ae66-b596-4bcd-bda4-9819a47be4c6",
    "metadata": {},
    "outputs": [
@@ -567,7 +567,7 @@
        "2                                  Poaceae sp."
       ]
      },
-     "execution_count": 12,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 125,
    "id": "7add8ae9-c2f4-491c-bf96-3acde27112b8",
    "metadata": {},
    "outputs": [
@@ -661,7 +661,7 @@
        "2              NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 126,
    "id": "76c312d0-ad0a-4804-9119-cd1c62dc75ab",
    "metadata": {},
    "outputs": [
@@ -738,7 +738,7 @@
        "2                                  Poaceae sp.       Poaceae sp."
       ]
      },
-     "execution_count": 14,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 127,
    "id": "884d6474-fca1-4c9b-a137-20a3612d73cd",
    "metadata": {},
    "outputs": [],
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 128,
    "id": "58dc936e-ef05-48c1-ac28-5a76e7ed2744",
    "metadata": {},
    "outputs": [
@@ -825,7 +825,7 @@
        "2     deciduous  Vaccinium uliginosum"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 129,
    "id": "81c9b832-465e-4139-b2fa-8f0095f078f1",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
        "2                "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 130,
    "id": "61bc9738-4ace-483f-a883-b78d5225326d",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
        "['graminoid', 'shrub', 'forb', nan, 'spore-bearing']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 131,
    "id": "562082ce-a87b-441f-9aa7-f70489994b8b",
    "metadata": {},
    "outputs": [],
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 132,
    "id": "9fcd3119-39fe-47b8-9b67-b309ef719e74",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 133,
    "id": "f9ba4445-418f-419c-bfc3-5c8f514dd4d2",
    "metadata": {},
    "outputs": [],
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 134,
    "id": "4d3b73f9-b6d8-444b-b21c-1bfc9f365b08",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1077,7 @@
        " 'wood']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 135,
    "id": "94664ec4-91b7-479c-9629-6bffdef32a1e",
    "metadata": {},
    "outputs": [],
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 136,
    "id": "3a982b51-a464-43b4-90d5-f498d4eb1c12",
    "metadata": {},
    "outputs": [
@@ -1208,7 +1208,7 @@
        "43            NaN     graminoid  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 137,
    "id": "5fb2d46f-5cd2-47af-a5d0-e85ae599a86e",
    "metadata": {},
    "outputs": [
@@ -1237,7 +1237,7 @@
        "       'water'], dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 138,
    "id": "cefd30c0-a670-4295-8eef-18f822821599",
    "metadata": {},
    "outputs": [
@@ -1335,7 +1335,7 @@
        "2           0.5  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 139,
    "id": "27d7d55d",
    "metadata": {},
    "outputs": [
@@ -1363,7 +1363,7 @@
        "280"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 140,
    "id": "e111d602-d096-440a-b352-b784039274fd",
    "metadata": {},
    "outputs": [],
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "id": "98492580-a8a9-47c2-be8d-92f56eb191b0",
    "metadata": {},
    "outputs": [
@@ -1506,7 +1506,7 @@
        "BARR_001.basePlot.div.32_1_4.BARR.1.2021    9.5    1.0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 142,
    "id": "4d8a8c8d",
    "metadata": {},
    "outputs": [
@@ -1531,7 +1531,7 @@
        "280"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 143,
    "id": "6791825e-04f8-49f8-b888-e1c6d9049375",
    "metadata": {},
    "outputs": [],
@@ -1566,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 144,
    "id": "3966ee2f-2807-487d-92d9-97722da58f66",
    "metadata": {},
    "outputs": [],
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 145,
    "id": "c79f389f-f8f6-44e9-96c4-4ef53c1ff6ca",
    "metadata": {},
    "outputs": [
@@ -1718,7 +1718,7 @@
        "BARR_001.basePlot.div.32_1_4.BARR.1.2021          0.5    1.0    9.5  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 146,
    "id": "715535ea-5ec0-4b56-b463-defcfc3cf678",
    "metadata": {},
    "outputs": [],
@@ -1792,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 147,
    "id": "f066abbc-4770-465c-a6e8-8c7930e6ad72",
    "metadata": {},
    "outputs": [],
@@ -1809,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 148,
    "id": "f9266660-82eb-49a0-83ea-69ac4d4f16de",
    "metadata": {},
    "outputs": [],
@@ -1854,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 149,
    "id": "a67e6dd3-af8d-4f8a-8743-d9ff2de99516",
    "metadata": {},
    "outputs": [],
@@ -1873,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 150,
    "id": "cfef4685-4ea1-4fd5-a58c-8e1d6fb4a6b9",
    "metadata": {},
    "outputs": [
@@ -2099,7 +2099,7 @@
        "[3 rows x 31 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2113,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 151,
    "id": "d33e1937",
    "metadata": {},
    "outputs": [
@@ -2131,7 +2131,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2142,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 152,
    "id": "7187636a",
    "metadata": {},
    "outputs": [
@@ -2157,8 +2157,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:746: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  grouped = grouped.applymap(normalize_cell)\n"
+      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:751: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  merged = merged.drop(columns=[col for col in merged.columns if 'geometry' in col])\n"
      ]
     },
     {
@@ -2172,8 +2172,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:746: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  grouped = grouped.applymap(normalize_cell)\n"
+      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:751: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  merged = merged.drop(columns=[col for col in merged.columns if 'geometry' in col])\n"
      ]
     },
     {
@@ -2187,10 +2187,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:746: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  grouped = grouped.applymap(normalize_cell)\n",
-      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:767: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  merged = merged.applymap(clean_set_cell)\n"
+      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:751: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  merged = merged.drop(columns=[col for col in merged.columns if 'geometry' in col])\n",
+      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:772: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  # information; e.g., duplicate coords or dates\n"
      ]
     }
    ],
@@ -2212,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 153,
    "id": "d3faef68",
    "metadata": {},
    "outputs": [
@@ -2234,7 +2234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 154,
    "id": "688c77b4-6af5-4bfb-b560-1f55d21d0a40",
    "metadata": {},
    "outputs": [],
@@ -2257,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 155,
    "id": "5401ddc4-7cd5-4610-858d-a19d1d70fac6",
    "metadata": {},
    "outputs": [
@@ -2265,10 +2265,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:797: FutureWarning: DataFrameGroupBy.grouper is deprecated and will be removed in a future version of pandas.\n",
-      "  group_ids = df.groupby(subset, sort=False).grouper.group_info[0]\n",
-      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:797: FutureWarning: DataFrameGroupBy.grouper is deprecated and will be removed in a future version of pandas.\n",
-      "  group_ids = df.groupby(subset, sort=False).grouper.group_info[0]\n"
+      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:802: FutureWarning: DataFrameGroupBy.grouper is deprecated and will be removed in a future version of pandas.\n",
+      "  for idx, group_id in zip(df.index, group_ids):\n",
+      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:802: FutureWarning: DataFrameGroupBy.grouper is deprecated and will be removed in a future version of pandas.\n",
+      "  for idx, group_id in zip(df.index, group_ids):\n"
      ]
     }
    ],
@@ -2288,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 156,
    "id": "1ccdcfc5-16b2-4ff6-875b-14308687bab7",
    "metadata": {},
    "outputs": [],
@@ -2319,7 +2319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 157,
    "id": "5c118237-5023-4dc2-8e07-fb57196f3c20",
    "metadata": {},
    "outputs": [
@@ -2339,7 +2339,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2350,7 +2350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 158,
    "id": "a3f05d06",
    "metadata": {},
    "outputs": [
@@ -2370,7 +2370,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2397,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 159,
    "id": "1f3d88f0",
    "metadata": {},
    "outputs": [
@@ -2407,7 +2407,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2430,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 160,
    "id": "9d6cd205",
    "metadata": {},
    "outputs": [
@@ -2450,7 +2450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 161,
    "id": "a4e62a1c",
    "metadata": {},
    "outputs": [
@@ -2472,7 +2472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 162,
    "id": "ae43723a",
    "metadata": {},
    "outputs": [],
@@ -2487,7 +2487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 163,
    "id": "201a7fdb",
    "metadata": {},
    "outputs": [],
@@ -2502,7 +2502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 164,
    "id": "7c9b7e03",
    "metadata": {},
    "outputs": [],
@@ -2514,14 +2514,6 @@
     "pft_aux = spf.format_column_dtypes(pft_aux, schema_key='pft_aux')\n",
     "spf.export_dataframe(pft_aux, f'output_data/{source}_plot_info.csv', schema_key='pft_aux', index=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed6c8a29",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
