--- a/abr/standardize_abr.ipynb
+++ b/abr/standardize_abr.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "id": "6a653972-658e-4613-aa24-fd5d6303244a",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "id": "c202f396-f35e-44ad-8174-075617eeb6a2",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "<module 'standardize_pft_funcs' from '/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "id": "4d91f630",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "id": "998917f1-800a-4dfb-a563-f936641a0d02",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "id": "fc0c373f-d848-49bc-b2ae-db7f979730ba",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "id": "a0a9a9e2-1201-4317-b939-eb858bba0ffc",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "2  120712b1       Carex bigelowii          11.26           True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 66,
    "id": "a48f617f",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "107"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "id": "3c043b57-60be-42bd-b7f3-e9081ff5fbda",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "id": "c07983a4-0d26-4cae-ae06-37051192cbdb",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
        "2  Dillman et al. 2012   species      lichen       lichen  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "id": "1138af7a-9288-4826-9e47-320ffe99af16",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
        "2       Carex bigelowii"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "id": "ec194035-e431-424a-a80e-abc2fa5fc2e9",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
        "2           Carex bigelowii       Carex bigelowii    graminoid"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "id": "6be75ab6-3f83-4a10-a753-dd7c2d79fc08",
    "metadata": {},
    "outputs": [
@@ -606,7 +606,7 @@
        "2       Carex bigelowii       Carex bigelowii"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "id": "e63eab71-0999-4c19-af9d-36a00aa49c00",
    "metadata": {},
    "outputs": [],
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 73,
    "id": "19164aaf-4110-4d24-b559-7b3b2363e9ae",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "2     deciduous  Vaccinium uliginosum"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 74,
    "id": "71e3e7f3-5c1c-46f9-9c3e-1da1bfaa277c",
    "metadata": {},
    "outputs": [
@@ -769,7 +769,7 @@
        "2       Carex bigelowii       Carex bigelowii    graminoid              "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 75,
    "id": "8f598c7b-3040-4760-a726-dc9d87f813a2",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,7 @@
        " 'liverwort']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 76,
    "id": "f663fbf8-dadc-4b87-bb1a-c0fc0ddc2799",
    "metadata": {},
    "outputs": [],
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 77,
    "id": "30d731f1-5410-4a6c-a872-2b157d5da9d8",
    "metadata": {},
    "outputs": [
@@ -846,7 +846,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 78,
    "id": "eddb6a25-ab52-422b-a88e-a21110670c4a",
    "metadata": {},
    "outputs": [],
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 79,
    "id": "bf32d88e-1d5c-437d-bdca-0b23da15af88",
    "metadata": {},
    "outputs": [
@@ -944,7 +944,7 @@
        " 'water']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 80,
    "id": "1e6e26a2-33dc-42f6-ab58-76b1ad4844fc",
    "metadata": {},
    "outputs": [],
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 81,
    "id": "6a3fd17d-ebf9-4855-8c69-ba2ebd85418a",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1080,7 @@
        "168           NaN            NaN        lichen  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 82,
    "id": "32d6da1e",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1109,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 83,
    "id": "8602e05c-244d-4f5a-90f0-129181482de6",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1197,7 @@
        "2  120712b1         11.26       Carex bigelowii     graminoid        graminoid"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "id": "1db0776d-7904-4a69-b5d5-ff8c0298115c",
    "metadata": {},
    "outputs": [
@@ -1283,7 +1283,7 @@
        "2  120712b1       Carex bigelowii     graminoid        graminoid         11.26"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 85,
    "id": "95ff179f",
    "metadata": {},
    "outputs": [
@@ -1306,7 +1306,7 @@
        "107"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 86,
    "id": "a861771b-de62-4d13-85bb-364530ecc0e4",
    "metadata": {},
    "outputs": [],
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 87,
    "id": "9e3550cf-b881-46cb-b260-b36c2451b8f4",
    "metadata": {},
    "outputs": [
@@ -1437,7 +1437,7 @@
        "120713b1       14.66    8.66   32.67    NaN    NaN  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 88,
    "id": "e73c007a-5d25-49e6-8b30-39ca42435e53",
    "metadata": {},
    "outputs": [],
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 89,
    "id": "6d8b748d-9388-431f-bd10-ccdc1f525476",
    "metadata": {},
    "outputs": [],
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 90,
    "id": "d6d99f14-ca53-4808-a5d0-53f8ad3258f3",
    "metadata": {},
    "outputs": [
@@ -1550,7 +1550,7 @@
        "120718a1     0.0          0.0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 91,
    "id": "f2ea2ffd-9b16-4cb5-9de4-5f657caf003b",
    "metadata": {},
    "outputs": [],
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 92,
    "id": "b873e7f3-a51e-48b3-9f9a-24daeb6cd272",
    "metadata": {},
    "outputs": [],
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 93,
    "id": "5bd352e9-5a95-4afe-8b46-a44237a6ba2d",
    "metadata": {},
    "outputs": [
@@ -1724,7 +1724,7 @@
        "120713b1          0.00    0.0    NaN  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 94,
    "id": "dc8850b0-9b38-4626-a0d0-3e4dbaafc208",
    "metadata": {},
    "outputs": [],
@@ -1802,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 95,
    "id": "5ffd8ab1-448e-46ba-a040-37731053f54b",
    "metadata": {},
    "outputs": [],
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 96,
    "id": "2d332108-1d86-4bf0-9788-ebd6f827522c",
    "metadata": {},
    "outputs": [],
@@ -1866,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 97,
    "id": "6e5471ca-379d-4792-aee0-4304e58dff89",
    "metadata": {},
    "outputs": [
@@ -2062,7 +2062,7 @@
        "[3 rows x 32 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2076,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 98,
    "id": "6fb7ea91",
    "metadata": {},
    "outputs": [
@@ -2094,7 +2094,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 99,
    "id": "22b80c4f",
    "metadata": {},
    "outputs": [
@@ -2120,8 +2120,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:746: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  grouped = grouped.applymap(normalize_cell)\n"
+      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:751: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  merged = merged.drop(columns=[col for col in merged.columns if 'geometry' in col])\n"
      ]
     },
     {
@@ -2135,8 +2135,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:746: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  grouped = grouped.applymap(normalize_cell)\n"
+      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:751: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  merged = merged.drop(columns=[col for col in merged.columns if 'geometry' in col])\n"
      ]
     },
     {
@@ -2150,10 +2150,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:746: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  grouped = grouped.applymap(normalize_cell)\n",
-      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:767: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  merged = merged.applymap(clean_set_cell)\n"
+      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:751: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  merged = merged.drop(columns=[col for col in merged.columns if 'geometry' in col])\n",
+      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:772: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  # information; e.g., duplicate coords or dates\n"
      ]
     }
    ],
@@ -2175,7 +2175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 100,
    "id": "8ab298c5",
    "metadata": {},
    "outputs": [
@@ -2197,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 101,
    "id": "a2bb00f9-ace1-49e5-8e38-9a56581ea1db",
    "metadata": {},
    "outputs": [],
@@ -2220,7 +2220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 102,
    "id": "e4e953f2-c0b0-464c-8daa-695fac09cfa9",
    "metadata": {},
    "outputs": [
@@ -2228,10 +2228,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:797: FutureWarning: DataFrameGroupBy.grouper is deprecated and will be removed in a future version of pandas.\n",
-      "  group_ids = df.groupby(subset, sort=False).grouper.group_info[0]\n",
-      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:797: FutureWarning: DataFrameGroupBy.grouper is deprecated and will be removed in a future version of pandas.\n",
-      "  group_ids = df.groupby(subset, sort=False).grouper.group_info[0]\n"
+      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:802: FutureWarning: DataFrameGroupBy.grouper is deprecated and will be removed in a future version of pandas.\n",
+      "  for idx, group_id in zip(df.index, group_ids):\n",
+      "/mnt/poseidon/remotesensing/arctic/alaska_pft_fcover_harmonization/standardize_pft_funcs.py:802: FutureWarning: DataFrameGroupBy.grouper is deprecated and will be removed in a future version of pandas.\n",
+      "  for idx, group_id in zip(df.index, group_ids):\n"
      ]
     }
    ],
@@ -2251,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 103,
    "id": "39b5d95c-1498-4918-be5a-50b72ca158c5",
    "metadata": {},
    "outputs": [],
@@ -2282,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 104,
    "id": "37273cc5-f43b-4149-89df-f234621ad610",
    "metadata": {},
    "outputs": [
@@ -2302,7 +2302,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2313,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 105,
    "id": "e0d651ef",
    "metadata": {},
    "outputs": [
@@ -2334,7 +2334,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2361,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 106,
    "id": "d76b9129",
    "metadata": {},
    "outputs": [
@@ -2371,7 +2371,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2394,7 +2394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 107,
    "id": "bc2f65e6",
    "metadata": {},
    "outputs": [
@@ -2402,7 +2402,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2407851/2164478736.py:2: UserWarning: Geometry column does not contain geometry.\n",
+      "/tmp/ipykernel_2414226/2164478736.py:2: UserWarning: Geometry column does not contain geometry.\n",
       "  fcover_and_aux['geometry'] = fcover_and_aux['geometry'].apply(lambda g: g.wkt if g is not None else None)\n"
      ]
     }
@@ -2414,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 108,
    "id": "79bf9ea6",
    "metadata": {},
    "outputs": [
@@ -2436,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 109,
    "id": "126dcfe6",
    "metadata": {},
    "outputs": [],
@@ -2451,7 +2451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 110,
    "id": "d09aefce",
    "metadata": {},
    "outputs": [],
@@ -2466,7 +2466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 111,
    "id": "404b8444",
    "metadata": {},
    "outputs": [
@@ -2474,7 +2474,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2407851/417965194.py:4: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_2414226/417965194.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
